vm.tf
resource "azurerm_network_interface" "nic" {
  name                = "rg-nic"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.guacsubnet.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.pubip.id
  }
}

resource "azurerm_public_ip" "pubip" {
  name                = "acceptanceTestPublicIp1"
  sku		      = "Standard"
  resource_group_name = azurerm_resource_group.rg.name
  location            = azurerm_resource_group.rg.location
  allocation_method   = "Static"

  tags = {
    environment = "Production"
  }
}

resource "azurerm_linux_virtual_machine" "rg" {
  name                = "rg-machine"
  resource_group_name = azurerm_resource_group.rg.name
  location            = azurerm_resource_group.rg.location
  size                = "Standard_F2"
  admin_username      = "guacadmin"
  network_interface_ids = [
    azurerm_network_interface.nic.id,
  ]
  custom_data =  base64encode(<<-EOF
	#!/bin/bash
	sudo apt update -y 
	sudo apt upgrade -y
	sudo apt install xrdp -y
	sudo systemctl enable xrdp
	sudo systemctl start xrdp
   EOF
   )

  admin_ssh_key {
    username   = "guacadmin"
    public_key = file("~/.ssh/id_rsa.pub")
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-server-jammy"
    sku       = "22_04-lts"
    version   = "latest"
  }
}
